--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Text 1</h1>
     <h2>Text 2</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ducimus, natus voluptatem neque eaque, odit totam sequi, odio dignissimos sunt sapiente quas hic voluptate est distinctio incidunt laudantium debitis aspernatur!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus modi consectetur sapiente delectus voluptas fuga nisi obcaecati asperiores eos fugiat! Cum quia placeat rem? Delectus incidunt ipsa cupiditate ea esse.</p>
 </body>
 </html>
