--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Text 1</h1>
-    <h2>Text 2</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum ducimus, natus voluptatem neque eaque, odit totam sequi, odio dignissimos sunt sapiente quas hic voluptate est distinctio incidunt laudantium debitis aspernatur!</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus modi consectetur sapiente delectus voluptas fuga nisi obcaecati asperiores eos fugiat! Cum quia placeat rem? Delectus incidunt ipsa cupiditate ea esse.</p>
+    <div>lots of words</div>
+    <div>and more and more words</div>
 </body>
 </html>
